# limo_autonomy_project_M2_PAR

./: .gitignore  README.md
PC_WS/src/limo_joystick_simu/: README.md
docs/: gantt.md  project_scope_requirements.md  roadmap_2025_2026.md
docs/Rapport_latex/: biblio.bib  chapitre_optimisation.tex  glossary.tex  project.txt  template_rapport (copy).tex  template_rapport.tex
limo_WS/src/limo_joystick/: README.md
limo_ws/: README.md
limo_ws/dataset/: README.md
limo_ws/outputs/: compare_three_letric_all_reloc_points.html  compare_three_letric_three_cases_points.html  outputs_rename_map.json
limo_ws/outputs/output_001/: distance_angle_analysis.html  distance_angle_metrics.csv  (+1 more)
limo_ws/profiles/: README.md  build_real.sh  build_sim.sh  generate_tag_map_yaml_from_csv.py  launch_real_nav_minimal.sh  launch_real_online_relocalization.sh  launch_real_perception.sh  launch_sim_online_relocalization.sh  launch_sim_online_relocalization_map.sh  launch_sim_parking.sh  launch_sim_tags_dataset.sh  launch_sim_tags_online_detection.sh  launch_teleop_joy_sim.sh  record_sim_dataset.sh  rotate_reference_frame.py
limo_ws/src/limo_online_relocalization/: README.md  package.xml  setup.cfg  setup.py
limo_ws/src/limo_online_relocalization/launch/: online_relocalization.launch.py
limo_ws/src/limo_online_relocalization/limo_online_relocalization/: online_relocalization_node.py
limo_ws/src/limo_online_relocalization/rviz/: online_relocalization.rviz  online_relocalization_map.rviz
tutorials/: Exemple_LIMO_gazebo_with_joystick.md  cofig_Limo_ROS2_Humble_eviroment.md
(+331 files in other folders)
